--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-theme-addition",
     "displayName": "Addition Theme",
     "description": "",
-    "version": "1.1.3",
+    "version": "1.2.0",
     "publisher": "fbosch",
     "keywords": [
         "theme",
@@ -11,6 +11,10 @@
     ],
     "engines": {
         "vscode": "^1.10.0"
+    },
+    "galleryBanner": {
+    "color": "#37B19B",
+    "theme": "dark"
     },
     "categories": [
         "Themes"
@@ -22,7 +26,7 @@
             {
                 "label": "Addition",
                 "uiTheme": "vs-dark",
-                "path": "./themes/Addition.tmTheme"
+                "path": "./themes/addition.json"
             }
         ]
     }
