--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-theme-addition",
     "displayName": "Addition Theme",
     "description": "",
-    "version": "1.2.0",
+    "version": "1.2.1",
     "publisher": "fbosch",
     "keywords": [
         "theme",
@@ -13,7 +13,7 @@
         "vscode": "^1.10.0"
     },
     "galleryBanner": {
-    "color": "#37B19B",
+    "color": "#1A1A1A",
     "theme": "dark"
     },
     "categories": [
